--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,12 @@ h1{
     font-size:40px;
     font-family: 'Pattaya', sans-serif;
     text-align: center;
-    color:snow;
-    background-color:rgb(67, 168, 235);
+    color:rgb(240, 157, 79);
+    background-color:rgb(27, 26, 26);
 }
 
-p{
-    font-size: 16px;
+.texto{
+    font-size: 18px;
     line-height: 1.5;
     letter-spacing: 1px;
     color:black;
