--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,61 @@
 html{
     font-size: 15px;
     font-family: 'Pattaya', sans-serif;
-    background-color:snow;
+    background-color:372C2C;
 }
 
 h1{
     font-size:40px;
     font-family: 'Pattaya', sans-serif;
     text-align: center;
-    color:rgb(240, 157, 79);
-    background-color:rgb(27, 26, 26);
+    color:snow;
+    background-color: rgba(59, 49, 43, 0.774);
 }
 
-.texto{
+.texto{ /*OU p, li*/
     font-size: 18px;
     line-height: 1.5;
     letter-spacing: 1px;
-    color:black;
+    color:372C2C;
+    text-align: center;
+}
+
+li{
+    /*list-style: none;*/
+    text-align: left;
 }
 
 img{
     margin: 0px; 
-    border: 2px solid rgb(0, 0, 0);
-    border-radius: 50px;
+    border: 2px solid rgba(59, 49, 43, 0.774);
+    border-radius: 10px;
+    /*width: 10px;*/
+}
+
+#foto2{
+    width:250px;
+    height: 320px;
+}
+
+body{
+    width: 700px;
+    border: 4px solid rgba(59, 49, 43, 0.424);
+    border-radius: 2px;
+    background-color: FFE8D2;
+    padding: 25px;
+    padding-top: 5px;
+    margin-left: 300px;
+    margin-right: 300px;
+    margin-top: 20px;
+}
+
+#link{
+    text-align: center;
+    font-size: 15px;
+}
+
+#algunslinks{
+    text-align: center;
+    word-spacing: 50px;
+    font-size: 18px;
 }
