--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@ h1{
     font-size:40px;
     font-family: 'Pattaya', sans-serif;
     text-align: center;
-    color:snow;
-    background-color: rgba(59, 49, 43, 0.774);
+    color:rgb(3, 87, 109);
+    /*background-color: rgba(59, 49, 43, 0.774);*/
 }
 
 .texto{ /*OU p, li*/
@@ -21,7 +21,6 @@ h1{
 }
 
 li{
-    /*list-style: none;*/
     text-align: left;
 }
 
@@ -29,7 +28,6 @@ img{
     margin: 0px; 
     border: 2px solid rgba(59, 49, 43, 0.774);
     border-radius: 10px;
-    /*width: 10px;*/
 }
 
 #foto2{
@@ -37,19 +35,23 @@ img{
     height: 320px;
 }
 
-body{
-    width: 700px;
-    border: 4px solid rgba(59, 49, 43, 0.424);
-    border-radius: 2px;
-    background-color: FFE8D2;
-    padding: 25px;
-    padding-top: 5px;
-    margin-left: 300px;
-    margin-right: 300px;
-    margin-top: 20px;
+#foto3{
+    align-items: center;
 }
 
-#link{
+body{
+    width: 400px;
+    border: 4px solid rgba(59, 49, 43, 0.424);
+    border-radius: 50px;
+    background-color: FFE8D2;
+    padding: 50px;
+    margin-left: 400px;
+    margin-right: 400px;
+    margin-top: 50px;
+    margin-bottom: 50px; 
+}
+
+.link{
     text-align: center;
     font-size: 15px;
 }
