--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,17 @@
 html{
     font-size: 15px;
     font-family: 'Pattaya', sans-serif;
-    background-color:372C2C;
+    background-color:rgb(88, 86, 86);
 }
 
 h1{
     font-size:40px;
     font-family: 'Pattaya', sans-serif;
     text-align: center;
-    color:rgb(3, 87, 109);
-    /*background-color: rgba(59, 49, 43, 0.774);*/
+    color:rgb(46, 14, 58);
 }
 
-.texto{ /*OU p, li*/
+p, li, ul{
     font-size: 18px;
     line-height: 1.5;
     letter-spacing: 1px;
@@ -20,40 +19,44 @@ h1{
     text-align: center;
 }
 
-li{
-    text-align: left;
-}
-
 img{
     margin: 0px; 
-    border: 2px solid rgba(59, 49, 43, 0.774);
-    border-radius: 10px;
+    border: 2px solid rgb(46, 14, 58);;
+    border-radius: 100px;
+    margin-left: 75;
 }
 
 #foto2{
     width:250px;
     height: 320px;
-}
-
-#foto3{
-    align-items: center;
+    margin-left: 25;
 }
 
 body{
-    width: 400px;
-    border: 4px solid rgba(59, 49, 43, 0.424);
-    border-radius: 50px;
-    background-color: FFE8D2;
+    width: 300px;
+    border: 4px solid rgb(46, 14, 58);
+    border-radius: 20px;
+    background-color: white;
     padding: 50px;
-    margin-left: 400px;
+    padding-top: 0px;
+    margin-left: 490px;
     margin-right: 400px;
     margin-top: 50px;
     margin-bottom: 50px; 
 }
 
 .link{
+    text-align: right;
+    font-size: 20px;
+}
+
+#links{
     text-align: center;
-    font-size: 15px;
+    font-size: 25px;
+    margin-top: 100;
+    border: 1px solid rgb(46, 14, 58);
+    border-radius: 10px;
+    background:rgb(184, 178, 178);
 }
 
 #algunslinks{
