--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,129 @@
-html{
-    font-size: 15px;
-    font-family: 'Pattaya', sans-serif;
-    background-color:rgb(88, 86, 86);
-}
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 
-h1{
-    font-size:40px;
-    font-family: 'Pattaya', sans-serif;
+:root {
+    --cor-principal: rgb(46, 14, 58);
+    --cor-secundaria: rgb(88, 86, 86);
+}
+* {
+    box-sizing: border-box;
+}
+body {
+    margin: 0;
+    font-family: 'Open Sans', sans-serif;
+} 
+
+h1 {
     text-align: center;
-    color:rgb(46, 14, 58);
+    color: var(--cor-principal);
+}
+ul {
+    padding: 0;
+}
+li {
+    list-style: none;
+}
+a {
+    text-decoration: none;
 }
 
-p, li, ul{
-    font-size: 18px;
-    line-height: 1.5;
-    letter-spacing: 1px;
-    color:372C2C;
-    text-align: center;
+/* NAV */
+nav {
+    margin-left: 20px;
+    margin-top: 20px;
 }
-
-img{
-    margin: 0px; 
-    border: 2px solid rgb(46, 14, 58);;
-    border-radius: 100px;
-    margin-left: 75;
-}
-
-#foto2{
-    width:250px;
-    height: 320px;
-    margin-left: 25;
-}
-
-body{
-    width: 300px;
-    border: 4px solid rgb(46, 14, 58);
-    border-radius: 20px;
-    background-color: white;
-    padding: 50px;
-    padding-top: 0px;
-    margin-left: 490px;
-    margin-right: 400px;
-    margin-top: 50px;
-    margin-bottom: 50px; 
-}
-
-.link{
-    text-align: right;
+nav ul li {
+    display: inline-block;
+    padding: 10px;
     font-size: 20px;
 }
-
-#links{
-    text-align: center;
-    font-size: 25px;
-    margin-top: 100;
-    border: 1px solid rgb(46, 14, 58);
-    border-radius: 10px;
-    background:rgb(184, 178, 178);
+nav ul li:hover {
+    background-color: #eee;
 }
 
-#algunslinks{
+/* FOTO */
+#foto {
+    border: 2px solid var(--cor-principal);
+    border-radius: 100px;
+    display: block;
+    margin: auto;
+}
+
+/* TECNOLOGIAS*/
+.tecnologias {
+    width: 450px;
+    margin: auto;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+
+    margin-top: 20px;
+}
+.tecnologias h2 {
     text-align: center;
-    word-spacing: 50px;
+}
+.tecnologias ul {
+    display: flex;
+    justify-content: space-around;
+}
+.tecnologias ul li img {
+    width: 50px;
+}
+
+/* CONTATOS */
+.contatos {
+    margin: auto;
+    margin-top: 50px;
+    width: 450px;
+}
+.contatos li {
+    padding: 10px;
+    margin: 10px;
+
+    border-radius: 20px;
+    background-color: #ccc;
+
     font-size: 18px;
+    text-align: center;
+}
+.contatos a {
+    color: #000;
+}
+
+/* SOBRE MIM */
+.sobre-mim {
+    width: 450px;
+    margin: auto;
+    text-align: justify;
+}
+.sobre-mim img {
+    width: 200px;
+    display: block;
+    margin: auto;
+}
+
+@media(max-width:450px) {
+    /* NAV */
+    nav ul li {
+        padding: 10px;
+    }
+
+    /* TECNOLOGIAS*/
+    .tecnologias {
+        width: 100%;
+    }
+    .tecnologias ul {
+        flex-wrap: wrap;
+    }
+
+    /* SOBRE MIM */
+    .sobre-mim {
+        width: 100%;
+    }
+    .sobre-mim img {
+        width: 150px;
+    }
+
+    /* CONTATOS */
+    .contatos {
+        width: 100%;
+    }
 }
